# nany

./: .gitignore
cpp/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  build.py  common.cmake  vcpkg.json
cpp/3rd-libs/: readme.txt
cpp/3rd-src/lua/: CMakeLists.txt  CMakeLists.txt.bak
cpp/3rd-src/lua/inc/: luac.h
cpp/3rd-src/lua/src/: lapi.c  lbaselib.c  ldblib.c  llex.c  loadlib.c  loslib.c  lua.sln  lua.vcxproj  lua.vcxproj.filters  luac.c
cpp/doc/: GammaConnects.md  GammaNetwork.md  GammaShm.md  README.md
cpp/include/GammaCommon/: BinaryFind.h  CAlloc.h  CAtomicOperation.h  CBinaryDiff.h  CBinaryDiff.inl  CBoundingBox.h  CColor.h  CDataProtect.h  CDictionary.h  CDir.h  CDirSearch.h  CDirectory.h  CDomXml.h  CDynamicObject.h  CFileUtil.h  CGamma3DViewOperator.h  CGammaObject.h  CGammaRand.h  CGammaWindow.h  CIniFile.h  CJson.h  CMatrix.h  CNew.h  CPathMgr.h  CPkgFile.h  CPlane.h  CQuaternion.h  CRefshare.h  CRunLength.h  CTableFile.h  CThread.h  CThreadUtil.h  CUserException.h  CVarient.h  CVersion.h  CVirtualFun.h  ConvexDecomposition.inl  FixedPoint.h  GammaCodeCvs.h  GammaCommonType.h  (+55 more)
cpp/include/GammaConnects/: CBaseConn.h  ConnectDef.h  IConnectionMgr.h  TBasePrtlMsg.h  TDispatch.h  TDispatch.inl
cpp/include/GammaDatabase/: IDatabase.h
cpp/include/GammaMTDbs/: CBaseDbsConn.h  IDbsQuery.h  IDbsThreadMgr.h  IResultHolder.h
cpp/include/GammaNetwork/: CAddress.h  INetHandler.h  INetworkInterface.h
cpp/include/GammaScript/: CDebugBase.h  CScriptBase.h  CScriptLua.h  GammaScript.h  GammaScriptDef.h  GammaScriptMacro.h  GammaScriptWrap.h
cpp/include/GammaShm/: CBaseShareMemory.h  IShareMemoryMgr.h
cpp/include/gamma/GammaCommon/: AES.h  BinaryFind.h  CAlloc.h  CBinaryDiff.inl  CColor.h  CDataProtect.h  CDir.h  CDomXml.h  CDynamicFile.h  CGammaRand.h  CIniFile.h  CLockUtil.h  CMatrix.h  CNullpointException.h  CPathMgr.h  CPkgFile.h  CRunLength.h  CTableFile.h  CTinyTimer.h  CVersion.h  ConvexDecomposition.h  FixedPoint.h  GammaAny.h  GammaAppDelegate.h  GammaCodeCvs.h  GammaHelp.h  GammaMath.h  GammaMessageID.h  GammaPackageCommon.h  GammaPlatform.h  GammaProfile.h  IGammaFileMgr.h  LZO.h  PerlinNoise.h  SnowFlake.h  TArrayDiff.h  TBitSet.h  TCircleBuffer.inl  THeapSort.h  TPart.h  (+8 more)
cpp/include/gamma/GammaConnects/: CBaseConn.h  IConnectionMgr.h  TDispatch.h
cpp/include/gamma/GammaMTDbs/: CBaseDbsConn.h  IDbsQuery.h
cpp/include/gamma/GammaNetwork/: GammaNetworkBase.h  INetworkInterface.h
cpp/include/gamma/GammaScript/: CScriptBase.h  CScriptLua.h  GammaScriptDef.h  GammaScriptMacro.h  GammaScriptWrap.h
cpp/sample/GammaConnects/: CMakeLists.txt  SampleProtocol.h  client.cpp  server.cpp
cpp/sample/GammaDatabase/: CMakeLists.txt  main.cpp
cpp/sample/GammaMTDbs/: CMakeLists.txt  main.cpp
cpp/sample/GammaNetwork/: CMakeLists.txt  client.cpp  server.cpp
cpp/sample/GammaShm/: CMakeLists.txt  main.cpp
cpp/sample/main/: CMakeLists.txt
cpp/source/GammaCommon/: AES.cpp  Android.cpp  Android.h  CAniCursorFile.cpp  CAniCursorFile.h  CBoundingBox.cpp  CConsole.cpp  CConsole.h  CDictionary.cpp  CDirectory.cpp  CDomXml.cpp  CDynamicFile.cpp  CDynamicObject.cpp  CFileUtil.cpp  CGammaDebug.cpp  CGammaDebug.h  CGammaFileMgr.cpp  CGammaFileMgr.h  CGammaObject.cpp  CGammaWindow.cpp  CIniFile.cpp  CJson.cpp  CLog.cpp  CLog.h  CMakeLists.txt  CMemoryMgr.cpp  CMemoryMgr.h  CNullpointException.cpp  CPackage.cpp  CPackage.h  CPackageMgr.cpp  CPackageMgr.h  CPathMgr.cpp  CPkgFile.cpp  CReadFileThread.cpp  CReadFileThread.h  CRefshare.cpp  CResObject.cpp  CResObject.h  CTableFile.cpp  (+24 more)
cpp/source/GammaConnects/: CBaseConn.cpp  CConnection.cpp  CConnection.h  CConnectionMgr.cpp  CConnectionMgr.h  CListenHandler.cpp  CListenHandler.h  CPrtConnection.cpp  CPrtConnection.h  CWebConnection.cpp  CWebConnection.h  GammaPrt.h  WebSocketPrt.h
cpp/source/GammaDatabase/: CDatabase.cpp  CDatabase.h  CDbConnection.cpp  CDbConnection.h  CDbDynamicStatement.cpp  CDbDynamicStatement.h  CDbPreCompileStatement.cpp  CDbPreCompileStatement.h  CDbResult.cpp  CDbResult.h  CDbStatement.cpp  CDbStatement.h  CMakeLists.txt  ReadMe.txt
cpp/source/GammaMTDbs/: CDbsQuery.cpp  CDbsQuery.h  CDbsThread.cpp  CDbsThread.h  CDbsThreadMgr.cpp  CDbsThreadMgr.h  CMakeLists.txt
cpp/source/GammaNetwork/: CAddrResolution.cpp  CAddrResolution.h  CAddress.cpp  CGConnecter.cpp  CGConnecter.h  CGListener.cpp  CGListener.h  CGNetBuffer.h  CGNetBuffer.inl  CGNetThread.cpp  CGNetThread.h  CGNetwork.cpp  CGNetwork.h  CGSocket.cpp  CGSocket.h  GammaNetworkHelp.h
cpp/source/GammaScript/: CCallInfo.cpp  CCallInfo.h  CClassInfo.cpp  CClassInfo.h  CDebugBase.cpp  CDebugLua.cpp  CDebugLua.h  CMakeLists.txt  CScriptBase.cpp  CScriptLua.cpp  CTypeBase.cpp  CTypeBase.h  CTypeLua.cpp  CTypeLua.h
cpp/source/GammaShm/: CMakeLists.txt  CShareMemoryMgr.cpp  CShareMemoryMgr.h  ShareMemoryHelp.h
cpp/source/gamma/GammaCommon/: CBoundingBox.cpp  CDictionary.cpp  CDynamicObject.cpp  CFileUtil.cpp  CGammaDebug.cpp  CGammaFileMgr.cpp  CGammaFileMgr.h  CGammaWindow.cpp  CLog.cpp  CMakeLists.txt  CMgrInstance.cpp  CMgrInstance.h  CPackageMgr.cpp  CPathMgr.cpp  CThreadHelp.h  CUserException.cpp  GammaCodeCvs.cpp  GammaHash.cpp  GammaMemory.cpp  IOS.h  PathHelp.h  PerlinNoise.cpp  Win32.cpp  Win32.h  resource.h
cpp/source/gamma/GammaConnects/: CBaseConn.cpp  CConnection.cpp  CMakeLists.txt  CPrtConnection.cpp  CWebConnection.h  GammaPrt.h  ReadMe.txt  WebSocketPrt.h  ikcp.cpp  ikcp.h
cpp/source/gamma/GammaDatabase/: CDatabase.cpp  CDbConnection.cpp  CDbConnection.h  CDbPreCompileStatement.cpp  CDbResult.h  CDbStatement.cpp
cpp/source/gamma/GammaMTDbs/: CDbsQuery.h  CDbsThread.cpp  CDbsThread.h
cpp/source/gamma/GammaNetwork/: CAddress.cpp  CGListener.h  CGNetwork.h  CGSocket.h  ReadMe.txt  resource.h
cpp/source/gamma/GammaScript/: CCallInfo.cpp  CClassInfo.cpp  CScriptLua.cpp  CTypeBase.cpp  CTypeBase.h  MemoryUnit.h
cpp/source/gamma/GammaShm/: ShareMemoryHelp.h
